fix(asset-section): visibility tokensList

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -53,18 +53,18 @@ section{
 }
 
 .vue-apexcharts{
-  .apexcharts-toolbar{
-    display: none;
-  }
-  .apexcharts-xaxistooltip-bottom{
-    display: none;
-  }
-  .apexcharts-tooltip .apexcharts-active {
-    display: none !important;
-  }
-  .apexcharts-tooltip-title{
-    display: none;
-  }
+  //.apexcharts-toolbar{
+  //  display: none;
+  //}
+  //.apexcharts-xaxistooltip-bottom{
+  //  display: none;
+  //}
+  //.apexcharts-tooltip .apexcharts-active {
+  //  display: none !important;
+  //}
+  //.apexcharts-tooltip-title{
+  //  display: none;
+  //}
 
 }
 
